--- a/sass/main.sass
+++ b/sass/main.sass
@@ -120,7 +120,7 @@ header
 a
     color: #ffffff
 
-a:hover
+a.mail:hover
     background-color: #ffffff
     color: #000000
     transition: 1s all
