--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,8 @@ header {
   height: 150px;
   margin-right: 5%;
   padding: 3% 0%;
-  position: relative; }
+  position: relative;
+  margin-top: 10%; }
 
 .image {
   display: flex;
