--- a/sass/main.sass
+++ b/sass/main.sass
@@ -269,3 +269,16 @@ a.mail:hover
 @media only screen and (max-width: 700px) and (min-width: 600px) and (min-height: 300px) and (max-height: 400px)
     body
         font-size: 12px
+@media only screen and (max-width: 400px) and (min-width: 300px) and (min-height: 400px) and (max-height: 500px)
+    body
+        font-size: 10px
+    .mini-graphic
+        width: 100vw
+        height: 50vh
+    .technologies-graphic:first-child
+        margin-top: 15%
+    .technologies-graphic
+        height: 10vh
+@media only screen and (max-width: 500px) and (min-width: 400px) and (min-height: 300px) and (max-height: 400px)
+    body
+        font-size: 10px
